# claude-sandbox

./: .gitignore  Dockerfile  README.md  claude-sandbox.sh  container.icns  docker-icon.icns  entrypoint.sh  pyproject.toml  setup-host-audio.sh  verify-sandbox.sh
src/claude_sandbox/: __init__.py  args.py  cli.py  docker.py  system.py
tests/: test_args.py  test_cli.py  test_docker.py  test_functional.py  test_system.py
