[project]
name = "claude-sandbox"
version = "0.1.0"
description = "Launch Claude Code in a sandboxed Docker container with audio forwarding and network isolation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["click>=8.0"]

[project.scripts]
claude-sandbox = "claude_sandbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sandbox"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
